--- a/zola_site/content/growth/010 简介/010 自我介绍.md
+++ b/zola_site/content/growth/010 简介/010 自我介绍.md
@@ -4,8 +4,7 @@ date = "2025-12-03"
 +++
 
 姓名：陈诚（网名）
-- 喜欢思考事物的底层逻辑
-	- 有强烈的好奇心
+- 喜欢思考事物的底层逻辑- 有强烈的好奇心
 	- 喜欢和有深刻思想，经历丰富的人深度交流，一起探索事物的本源和交流对人生的感受
 	- 喜欢羽毛球
 	- 希望自己的能力不断增加，与更多同频的人一起成长
