--- a/zola_site/content/growth/010 自我介绍.md
+++ b/zola_site/content/growth/010 自我介绍.md
@@ -4,5 +4,5 @@ date = "2025-12-05"
 +++
 
 姓名：陈诚（网名）
-- 喜欢思考事物的底层逻辑，有强烈的好奇心，希望与人为善，大家开心最重要，喜欢da羽毛球
+- 喜欢思考事物的底层逻辑，有强烈的好奇心，希望与人为善，大家开心最重要，喜欢打羽毛球
 - 希望自己的能力不断增加，与更多同频的人一起成长
