sync: growth updates

--- a/zola_site/content/growth/030 ai 产业分析/010 提示词.md
+++ b/zola_site/content/growth/030 ai 产业分析/010 提示词.md
@@ -3,3 +3,29 @@ title = "010 提示词"
 date = "2025-12-05"
 +++
 
+请对AI行业美股上市公司进行全面的产业链分析。
+
+分析应包括以下几个核心部分：
+
+产业链划分：
+
+将AI产业链划分为至少三个主要层次：基础设施层、模型与平台层、应用层。
+详细说明每个层次的定义、关键技术和主要功能。
+各层次代表性上市公司及其业务：
+
+在基础设施层，列举至少3-5家代表性美股上市公司，包括但不限于AI芯片/硬件供应商（如NVIDIA、AMD、Intel）、数据中心/云计算服务提供商（如Microsoft、Google、Amazon、Oracle）以及数据管理或服务公司（如Innodata、Snowflake）。
+在模型与平台层，列举至少2-3家代表性美股上市公司，例如大模型开发商（如Google、Meta）和AI平台/开发工具提供商（如IBM）。
+在应用层，列举至少5-8家代表性美股上市公司，涵盖企业级AI解决方案（如Palantir、C3.AI、Rubrik、DocuSign、Okta、Asana）、垂直领域AI应用（如Doximity、Tempus AI、SoundHound AI、Upstart Holdings）、AI营销/广告（如AppLovin）、智能助理/设备端AI（如Apple）以及AI工作流自动化等。
+对于每家公司，简要介绍其在AI产业链中的具体业务和核心竞争力。
+产业链上下游联动与协同效应：
+
+分析不同层次之间的相互关系和依赖性，例如基础设施对模型和应用层的支撑作用。
+探讨产业链上下游公司如何通过合作、并购或生态系统建设来增强协同效应，例如微软与OpenAI的合作。
+行业发展趋势与投资机会：
+
+分析当前AI行业的主要发展趋势，例如生成式AI的普及、AI代理的兴起、边缘AI的发展、数据中心资本开支的增长等。
+基于产业链分析，识别未来AI行业美股上市公司可能存在的投资机会和潜在风险。
+总结与展望：
+
+对AI行业美股上市公司产业链的整体格局进行总结。
+展望未来几年AI技术和市场的发展方向及其对产业链的影响。
