sync: site updates

--- a/zola_site/content/growth/020 成长日记/973 251206.md
+++ b/zola_site/content/growth/020 成长日记/973 251206.md
@@ -34,7 +34,8 @@ date = "2025-12-06"
 
 第三步呢，可以请Cursor在互联网上搜索，对谷歌公司分析最深刻的十篇文章，把它导入到Notebook llm 里面进行分析。
 
-
+### 测试了谷歌Gemini Studio里面的图文并茂的功能
+觉得这个功能特别强大，可以很好地对一个问题进行深入的理解。
 
 
 
