sync: site updates

--- a/zola_site/content/growth/020 成长日记/960 251207.md
+++ b/zola_site/content/growth/020 成长日记/960 251207.md
@@ -14,8 +14,7 @@ date = "2025-12-07"
 
 ### 重点分析
 做出一个研究框架，使用大模型做出文档
-
-![image](../../010%20Life%20OS/010%20Diary/assets/960%20251207/image.png)
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/960%20251207/image.png)
 #### 1. 认知与信息层 (Cognition & Information)
 **核心逻辑：** 谁在定义“大脑”（算力与模型），谁在定义“接口”（交互），谁在搭建“神经网”（基础设施）。
 *   **AI (模型与应用)**
