--- a/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
+++ b/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
@@ -3,6 +3,18 @@ title = "010 分析提示词"
 date = "2025-12-09"
 +++
 
+我计划从以下几个维度对谷歌（股票代码 **GOOG**）展开分析，想请您就以下思路是否合适、有无需要完善或补充之处提供建议：
+
+  
+
+1. **官方信源**：公司官网投资者关系频道（财报、演示文稿、业绩电话会记录）。
+
+2. **监管文件**：通过SEC Edgar数据库获取的10-K年度报告和10-Q季度报告。
+
+3. **顶级分析师报告**：收集华尔街主要投行（如摩根士丹利、高盛）覆盖该公司的研究报告。
+
+4. **深度长文**：在Seeking Alpha、Substack等平台检索由专业作者撰写的深度分析文章。
+
 我计划从以下维度对谷歌（股票代码 **GOOG**）展开分析，能问一下这个思路是否合适，是否有完善补充的地方
 - **官方信源**：公司官网投资者关系频道（财报、PPT、电话会实录）。
 - **监管文件**：SEC Edgar数据库中的10-K年报、10-Q季报。
