--- a/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
+++ b/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
@@ -10,4 +10,11 @@ date = "2025-12-09"
 4. **深度长文**：在Seeking Alpha、Substack等平台检索由专业作者撰写的深度分析文章。
 
 
-深度长文的bu
+#####  深度长文的补充
+#### 4. **深度长文**（Seeking Alpha、Substack）
+
+- **合适性**：补充定性洞见，但质量参差（Seeking Alpha有量化作者优秀）。
+- **完善建议**：
+    - 优先**高影响力作者**：如SA的“Gold”作者，或Substack的科技专栏（e.g., Stratechery by Ben Thompson）。
+    - 筛选标准：引用官方数据、发布日期<6个月、阅读量>10k。
+    - 补充**学术/智库**：如 Brookings、CB Insights的AI/广告市场报告。
