sync: site updates

--- a/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
+++ b/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
@@ -11,7 +11,7 @@ date = "2025-12-09"
 
 
 #####  深度长文的补充
-#### 4. **深度长文**（Seeking Alpha、Substack）
+#### 4. **深度长文**（Seeking Alpha、Substack） Grok
 - **完善建议**：
     - 优先**高影响力作者**：如SA的“Gold”作者，或Substack的科技专栏（e.g., Stratechery by Ben Thompson）。
     - 筛选标准：引用官方数据、发布日期<6个月、阅读量>10k。
