--- a/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
+++ b/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
@@ -16,3 +16,17 @@ date = "2025-12-09"
     - 优先**高影响力作者**：如SA的“Gold”作者，或Substack的科技专栏（e.g., Stratechery by Ben Thompson）。
     - 筛选标准：引用官方数据、发布日期<6个月、阅读量>10k。
     - 补充**学术/智库**：如 Brookings、CB Insights的AI/广告市场报告。
+
+## 一个可能的整体研究结构
+
+你可以把上述内容整理成一个清晰的“研究文档框架”：
+
+1. 公司 & 业务概览（基于 10-K & IR）
+2. 业务分部与财务拆解（Search / YouTube / Cloud / Other Bets）
+3. 行业与竞争格局（与微软、Meta、亚马逊等对比）
+4. AI 战略与技术产品分析
+5. 监管、法律与长期风险
+6. 财务质量与估值框架
+7. 市场定价与情绪简评
+8. 关键假设 & 情景分析（Bear / Base / Bull）
+9. 投资结论与主要不确定性
