sync: site updates

--- a/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
+++ b/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
@@ -17,7 +17,7 @@ date = "2025-12-09"
     - 筛选标准：引用官方数据、发布日期<6个月、阅读量>10k。
     - 补充**学术/智库**：如 Brookings、CB Insights的AI/广告市场报告。
 
-#### 一个可能的整体研究结构 GPT 5.1 
+#### 一个可能的整体研究结构 GPT 5.1 Thinking
 你可以把上述内容整理成一个清晰的“研究文档框架”：
 
 1. 公司 & 业务概览（基于 10-K & IR）
