sync: site updates

--- a/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
+++ b/zola_site/content/growth/040 Google 公司分析/010 分析提示词.md
@@ -31,7 +31,7 @@ date = "2025-12-09"
 9. 投资结论与主要不确定性
 
 
-#### 一、报告整体目录（建议 10–20 页）
+#### 报告整体目录（建议 10–20 页）
 
 你可以把整篇报告组织成下面 8–9 个章节，结构兼顾专业度和可读性：
 
