sync: site updates

--- a/zola_site/content/growth/030 Life OS/010 马丁·塞利格曼的 PERMA 模型/030111777.md
+++ b/zola_site/content/growth/030 Life OS/010 马丁·塞利格曼的 PERMA 模型/030111777.md
@@ -9,33 +9,12 @@ date = "2025-12-09"
 
 ---
 
-## 完整报告（HTML 版本）
+## 📊 完整报告（HTML 交互式版本）
 
-> 以下内容包含交互式图表和完整样式，建议在 Obsidian 中查看。
+> 💡 **提示**：以下内容包含完整的 HTML、CSS 样式和交互式图表。在 Obsidian 中，HTML 内容会被渲染显示。
 
-### 方式一：嵌入 HTML 文件（推荐）
+<style>
 
-<iframe src="117788.html" width="100%" height="1200px" frameborder="0" style="border: 1px solid #e5e7eb; border-radius: 8px;"></iframe>
-
----
-
-### 方式二：直接嵌入 HTML 代码
-
-<details>
-<summary>点击展开查看完整 HTML 内容</summary>
-
-```html
-
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>幸福生活研究报告：PERMA模型与三维幸福指数</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <style>
         body {
             font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
             background-color: #FFFFFF;
@@ -109,9 +88,14 @@ date = "2025-12-09"
             transform: rotate(0deg);
             transform-origin: 50% 50%;
         }
-    </style>
-</head>
-<body class="bg-white">
+    
+</style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
     <div class="max-w-7xl mx-auto p-4 md:p-8">
         <!-- 标题卡片 -->
         <div class="card md:col-span-4 p-8 md:p-12 mb-4 md:mb-6 flex flex-col justify-center items-center text-center">
@@ -837,8 +821,10 @@ date = "2025-12-09"
             </p>
         </div>
     </div>
-</body>
+
+
 <script>
+
     // 幸福感评分器交互
     const happinessSlider = document.getElementById('happiness-slider');
     const happinessScore = document.getElementById('happiness-score');
@@ -905,16 +891,12 @@ date = "2025-12-09"
             }
         }
     });
+
 </script>
-</html>
-
-```
-
-</details>
 
 ---
 
-## 文字版本
+## 📝 文字版本
 
 > 如果您更喜欢纯文字版本，可以查看下面的内容。
 
@@ -924,38 +906,9 @@ date = "2025-12-09"
 
 本报告旨在深入分析PERMA模型的理论内涵与实践价值，同时将其与三维幸福指数模型进行对照整合，最终构建一个综合性的幸福生活实践框架。
 
-### 健康指数
-身心和谐的基础维度，包括身体健康与心理健康两大方面。
-
-- 身体健康：柔韧性、力量、速度
-- 心理健康：积极理解世界的能力
-- 三大支柱：饮食、睡眠和运动
-
-### 情感指数
-人际关系的质量维度，体现为与他人的良好关系和社会支持。
-
-- 社会支持系统的构建
-- 信任关系的建立与维护
-- 高质量连接的培养
-
-### 价值指数
-意义实现的超越维度，体现为帮助他人、服务社会的能力。
-
-- 价值实现的层次递进
-- 影响范围的持续扩展
-- 可持续价值创造模式
+---
 
 ## PERMA模型：幸福生活的五要素
-
-过去、现在和未来的愉悦体验
-
-心流体验，全神贯注的状态
-
-高质量的人际连接与社会支持
-
-超越自我的目标与使命感
-
-追求卓越，实现目标的满足感
 
 ### P - 积极情绪
 过去、现在和未来的愉悦体验
@@ -972,15 +925,9 @@ date = "2025-12-09"
 ### A - 成就
 追求卓越，实现目标的满足感
 
+---
+
 ## PERMA模型的理论演进
-
-塞利格曼提出"真实幸福理论"，认为培养积极情绪、投入和意义是理解和提升人类幸福的关键。
-
-塞利格曼在《持续的幸福》一书中正式提出PERMA模型，新增了关系和成就两个要素，形成了包含五个维度的完整框架。
-
-学者们认识到身体健康对幸福感的重要性，在PERMA基础上增加了健康要素，形成PERMAH六要素模型。
-
-最新的PERMA-V2模型增加了"适应性"这一关键要素，强调能灵活应对变化和压力的人更容易获得持续的幸福感。
 
 #### 2002 - 早期理论基础
 塞利格曼提出"真实幸福理论"，认为培养积极情绪、投入和意义是理解和提升人类幸福的关键。
@@ -994,13 +941,9 @@ date = "2025-12-09"
 #### 2024 - PERMA-V2模型
 最新的PERMA-V2模型增加了"适应性"这一关键要素，强调能灵活应对变化和压力的人更容易获得持续的幸福感。
 
+---
+
 ## 三维幸福指数模型
-
-身心和谐的基础维度，包括身体健康与心理健康两大方面。
-
-人际关系的质量维度，体现为与他人的良好关系和社会支持。
-
-意义实现的超越维度，体现为帮助他人、服务社会的能力。
 
 ### 健康指数
 身心和谐的基础维度，包括身体健康与心理健康两大方面。
@@ -1023,21 +966,19 @@ date = "2025-12-09"
 - 影响范围的持续扩展
 - 可持续价值创造模式
 
-## 当下分数与可持续程度
-
-衡量当前时刻的幸福感受，反映了短期的情绪状态和生活满意度。
-
-评估幸福状态的稳定性和持久性，反映了生活方式和心理韧性的质量。
+---
 
 ## PERMA与三维幸福指数的整合
 
 | PERMA要素 | 对应三维指数 | 具体关联 | 互补关系 |
 | --- | --- | --- | --- |
-| P 积极情绪 | 健康指数(心理健康) | 积极情绪直接影响心理健康状态 | PERMA提供情绪调节方法，三维指数强调身心整体 |
-| E 投入 | 健康指数+价值指数 | 心流体验提升心理健康，投入工作创造价值 | PERMA强调过程体验，三维指数注重结果价值 |
-| R 关系 | 情感指数 | 人际关系质量直接决定情感指数高低 | PERMA提供关系建立方法，三维指数强调支持信任 |
-| M 意义 | 价值指数 | 意义感来源于服务他人和社会贡献 | PERMA强调内在意义，三维指数注重外在贡献 |
-| A 成就 | 价值指数+健康指数 | 价值创造带来成就感，成就提升自我效能 | PERMA关注个人成长，三维指数强调社会价值 |
+| **P 积极情绪** | 健康指数(心理健康) | 积极情绪直接影响心理健康状态 | PERMA提供情绪调节方法，三维指数强调身心整体 |
+| **E 投入** | 健康指数+价值指数 | 心流体验提升心理健康，投入工作创造价值 | PERMA强调过程体验，三维指数注重结果价值 |
+| **R 关系** | 情感指数 | 人际关系质量直接决定情感指数高低 | PERMA提供关系建立方法，三维指数强调支持信任 |
+| **M 意义** | 价值指数 | 意义感来源于服务他人和社会贡献 | PERMA强调内在意义，三维指数注重外在贡献 |
+| **A 成就** | 价值指数+健康指数 | 价值创造带来成就感，成就提升自我效能 | PERMA关注个人成长，三维指数强调社会价值 |
+
+---
 
 ## PERMA模型干预效果数据
 
@@ -1048,25 +989,9 @@ date = "2025-12-09"
 - **宿舍冲突复发率降低**: 65% → 23%
 - **整体幸福感得分提升**: 39%
 
+---
+
 ## 整合性幸福生活实践框架
-
-建立健康的生活习惯，修复和维护重要关系。
-
-当下分数达到7分，可持续程度预期8分
-
-当下分数达到6分，可持续程度预期7分
-
-当下分数达到5分，可持续程度预期6分
-
-提升专业能力，扩展社会影响力。
-
-每月拓展一个有价值的关系
-
-创造更大社会价值，实现个人使命。
-
-在工作中取得突破性进展
-
-开始指导和帮助他人成长
 
 ### 基础建设期 (1-3个月)
 建立健康的生活习惯，修复和维护重要关系。
@@ -1088,6 +1013,8 @@ date = "2025-12-09"
 - **专业领域显著成就**: 在工作中取得突破性进展
 - **稳定社会支持网络**: 建立多元化支持系统
 - **影响和带动他人**: 开始指导和帮助他人成长
+
+---
 
 ## 立即行动建议
 
@@ -1112,15 +1039,9 @@ date = "2025-12-09"
 - 分享自己的经验和成果
 - 持续优化提升，追求更高层次的幸福
 
-## 幸福生活的关键洞察
+---
 
-PERMA模型与三维幸福指数相结合，提供了科学、系统、可操作的幸福生活指导方案。
-
-幸福不是一种状态，而是一种能力，需要通过持续的实践和体验来培养和提升。
-
-真正的幸福不仅是个人的满足，更是通过帮助他人、服务社会实现价值的过程。
-
-### 关键洞察
+## 关键洞察
 
 #### 科学方法
 PERMA模型与三维幸福指数相结合，提供了科学、系统、可操作的幸福生活指导方案。
@@ -1132,3 +1053,4 @@ PERMA模型与三维幸福指数相结合，提供了科学、系统、可操作
 真正的幸福不仅是个人的满足，更是通过帮助他人、服务社会实现价值的过程。
 
 > 正如塞利格曼所说："幸福不是一种状态，而是一种能力。"通过科学的方法和持续的努力，每个人都能够提升自己的幸福感，创造有意义、有价值的人生。
+
