sync: site updates

--- a/zola_site/content/growth/020 成长日记/930 251210.md
+++ b/zola_site/content/growth/020 成长日记/930 251210.md
@@ -3,6 +3,8 @@ title = "930 251210"
 date = "2025-12-11"
 +++
 
+
+
 ### life OS
  做出 V 0.010 版，虽然很简陋，但有了一个开始
 
@@ -13,34 +15,34 @@ date = "2025-12-11"
 
 ### 购买域名
 #### 购物篮
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414610.png)
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-5.png)
 
 #### 付款信息
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414607.png)
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-6.png)
 
 #### 邮箱验证
-![file-20251211112414605](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414605.png)
+![image-7](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-7.png)
 #### 将支付添加到钱包
-![file-20251211112414604](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414604.png)
+![image-8](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-8.png)
 #### 跳过设置
-![file-20251211112414602](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414602.png)
+![image-090](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-090.png)
 #### 验证电子邮件
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414595.png)
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-100.png)
 
 #### 验证邮件
-![file-20251211112414592](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414592.png)
+![image-110](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-110.png)
 #### 验证成功
-![file-20251211112414573](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414573.png)
+![image-120](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-120.png)
 
 ### 羽毛球视频分析
 我希望借助AI技术对个人羽毛球运动视频进行智能分析，以获得针对性的技术改进建议。是否可以分享一些有效的实现方法或推荐相关工具？我的电脑是 Mac mini m4 16G/256G ，硬盘还有 120G的空间，有 cursor 与 Claude code 入门使用经验
 
 日后还想分析拳击、格斗、乒乓球、健身的视频，能问一下什么方案比较好吗？
 #### 视频分析
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414571.png)
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-130.png)
 
 #### 格斗分析
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/file-20251211112414567.png)
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-140.png)
 
 代码pip install PyQt5
 ```
