sync: site updates

--- a/zola_site/content/growth/020 成长日记/930 251210.md
+++ b/zola_site/content/growth/020 成长日记/930 251210.md
@@ -3,7 +3,14 @@ title = "930 251210"
 date = "2025-12-11"
 +++
 
-
+一些思考。第一个思考是关于人生操作系统的。它应该是有一些评分。这个评分呢，它是不断地提高的。它的意思是说，比如说现在呢？比如说现在12点以前睡觉就是8分了。但是难度会逐步提高，以后到11点半以前睡觉才是8分。这是一个例子。然后它开始制定行动计划和方案。比如说你大概会怎么做？它要开始在这个人生操作系统会体现的。你有一个想法，就是一个方向吧。你会怎么去实施这个事情？这是要考虑的。那么这个版本就升级了。那第一个呢，是给系统打了分数，就是说你在某个指标上的分数。第二个呢，增添了行动计划。并且每次版本升级呢，都要做个说明，就说这个版本跟上个版本相比，升级哪个部分。
+第二个元认知指的是一个人为什么能提高？今天参加了拳击训练，但他感觉几乎没什么进步。为什么呢？因为他的核心就不一样，他的核心就是为了管理和控制，这个是不太可能提高的。只有让每个人不断地发挥着主动性、能动性，才可能让每个人有更多的机会。所以，不是直播，我写笔记。呀，真会讲话，怪不得店生意这么好。谢谢。它的核心是管理和控制，还是让它自由发展？这是一个核心的出发点。就算是就是对他很热情。
+就是一个人他能长期成长的根本原因是什么？第一个呢，他肯定是想进步，为一次为了进步。第二个呢，他可能是要有方法，这个方法的底层就是有技术，因为如果你没有技术的话，你的方法其实效率很难提高的。那评判一个人他的一个明显表现，就是他是否爱思考，是否爱学习新的东西。他是一个长思维，比如说我知道我知道。这种情况一般都不会有什么进步的，因为他就没思考，那没思考就没深度，他每次都没深度，那怎么可能提高呢？
+  要多走出来，下一步的步骤是不断地去寻找更合适的羽毛球的厂商，不断地寻找羽毛球的。
+  下一步是不断地往前探索。就说他有一个基本的思路，就说是什么呢？往前走。他首先在某些领域呢，不断树立优势。举例来说，比如说羽毛球的动作视频分析呀，如何建立自己的人生操作系统啊，怎么建一个网站呢？这些都不断地建设。第二个呢，他要及时地分享。目前主要的渠道呢？是小红书，但它基础是网站，给它做打底。第二，下面阶段呢，就是主动地和朋友们联系，主动和小红书那些KOL联系，跟他们交流这些系统的制作方法，互相切磋。那日后呢，他会开一些栏目，比如说怎么和别人交流，怎么做采访。怎么去做一些，他叫人世间史嘛，就见了很多人，拍了很多片子，然后又发上去了，因为视频可以让人更好地理解和认识。他其实核心是什么呢？就说你不断地每天精进，并且主动地和那些高手交流，他这个是核心。明天安排时间去看牙医。他要问一下大模型，这种情况怎么处理？应该看哪些医生？怎么样去理解医院的情况？怎么的打分？就是请大模型帮我去做判断和分析。同时把这个过程做成一个项目，
+  
+  实验吧，把这个项目做成实验。然后每个实验实验本身也是个产品，就是你做实验怎么做实验，实验结果也是个产品。就是你实验完结束之后呢，你的一个产品，是实验的思路。那第二个呢，如果成功了，你实验的方法，就是实验得出的一些方式方法是一个产品。就是你实验最起码有两个产品，一个呢是如何去做实验，另外一个呢是实验出来的方式和技巧是一个产品。
+想到今天有哪些练习有进步的？包括第一个呢？首先准备做网站升级。但查询到做网的升级必须先有一个域名，所以去申请一个域名被发俄卫。点top，总算拥有了人生的第一个域名，明天就可以考虑用Cloudflare去部署。我觉得比原来的那个Lily算有进步了。那第二个呢？是做了。第二个呢？是做了，想想看，做了一个。做了一个身体结构分析的测试。把它做出来了，但我觉得花生太多这点算是有问题的。不应该在上面花那么多时间，因为这样成本投入不划算。第三个呢？跟教练联系了。然后呢？参加了晚上的身体素质训练，由此主动约教练打羽毛球。碰到了群教练，我觉得算是一个进步，就是说认识更多的人。从体育训练的思路上来讲呢？他是说起码有两个方向，一个是羽毛球方向，一个是格斗的方向。那格斗呢？是做近身格斗训练打底。底的是嗯，跟我说话吗？打底的是什么呢？是铁秀他不满意的就是说他本身没有基础，以我为主，我觉得不是最理想的，我的理想是找。一个本身就很热爱格斗的人，他考虑是怎么去进步。我觉得这个就算是最好的，在寻找。起码要把方圆三公里的拳馆都找到，去找个更合适的。那第二个呢？是羽球的。方向找这个也是一样，找本身水平很高的，并且他。愿意用科技力量不断提高水平，这个就算是进步。基础的，并且往后来讲呢？就是不断地做出个系统，就如何去做出这个羽毛球的视频分析系统？我觉得这个是一个有力的方向，自己以后去可以帮别人分析。而且去结识更多种高素质的球友或者教练。我觉得这就是一个很好的突破点，就是说怎么去用那种羽毛球的视频分析技术。成为一个高技术的分析方法，由此介绍亲戚朋友。这是第二个，就说虽然今天格斗训练效果不怎么好。但是通过这个训练呢？我觉得应该有个新的认识，就是说固定模式，按套路行事。肯定是没有前途的。
 
 ### life OS
  做出 V 0.010 版，虽然很简陋，但有了一个开始
