sync: site updates

--- a/zola_site/content/growth/020 成长日记/930 251210.md
+++ b/zola_site/content/growth/020 成长日记/930 251210.md
@@ -13,6 +13,7 @@ date = "2025-12-11"
 将 Obsidian 指定文件夹的内容，自动同步到 Zola 站点并推送到 GitHub，触发 Netlify 自动部署，上线为可公开访问的网站。大模型推荐部署到 Cloudfare，需要一个域名。
 
 ### 购买域名
+far
 #### 购物篮
 ![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-5.png)
 
