sync: site updates

--- a/zola_site/content/growth/020 成长日记/930 251210.md
+++ b/zola_site/content/growth/020 成长日记/930 251210.md
@@ -15,25 +15,13 @@ date = "2025-12-11"
 ### 购买域名
 seefaraway.top
 
-#### 购物篮
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-5.png)
 
-#### 付款信息
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-6.png)
+### 羽毛球视频分析
+我希望借助AI技术对个人羽毛球运动视频进行智能分析，以获得针对性的技术改进建议。是否可以分享一些有效的实现方法或推荐相关工具？我的电脑是 Mac mini m4 16G/256G ，硬盘还有 120G的空间，有 cursor 与 Claude code 入门使用经验
 
-#### 邮箱验证
-![image-7](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-7.png)
-#### 将支付添加到钱包
-![image-8](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-8.png)
-#### 跳过设置
-![image-090](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-090.png)
-#### 验证电子邮件
-![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-100.png)
-
-#### 验证邮件
-![image-110](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-110.png)
-#### 验证成功
-![image-120](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%2025%0A%23%23%23%20%E7%BE%BD%E6%AF%9B%E7%90%83%E8%A7%86%E9%A2%91%E5%88%86%E6%9E%90%0A%E6%88%91%E5%B8%8C%E6%9C%9B%E5%80%9F%E5%8A%A9AI%E6%8A%80%E6%9C%AF%E5%AF%B9%E4%B8%AA%E4%BA%BA%E7%BE%BD%E6%AF%9B%E7%90%83%E8%BF%90%E5%8A%A8%E8%A7%86%E9%A2%91%E8%BF%9B%E8%A1%8C%E6%99%BA%E8%83%BD%E5%88%86%E6%9E%90%EF%BC%8C%E4%BB%A5%E8%8E%B7%E5%BE%97%E9%92%88%E5%AF%B9%E6%80%A7%E7%9A%84%E6%8A%80%E6%9C%AF%E6%94%B9%E8%BF%9B%E5%BB%BA%E8%AE%AE%E3%80%82%E6%98%AF%E5%90%A6%E5%8F%AF%E4%BB%A5%E5%88%86%E4%BA%AB%E4%B8%80%E4%BA%9B%E6%9C%89%E6%95%88%E7%9A%84%E5%AE%9E%E7%8E%B0%E6%96%B9%E6%B3%95%E6%88%96%E6%8E%A8%E8%8D%90%E7%9B%B8%E5%85%B3%E5%B7%A5%E5%85%B7%EF%BC%9F%E6%88%91%E7%9A%84%E7%94%B5%E8%84%91%E6%98%AF%20Mac%20mini%20m4%2016G/256G%20%EF%BC%8C%E7%A1%AC%E7%9B%98%E8%BF%98%E6%9C%89%20120G%E7%9A%84%E7%A9%BA%E9%97%B4%EF%BC%8C%E6%9C%89%20cursor%20%E4%B8%8E%20Claude%20code%20%E5%85%A5%E9%97%A8%E4%BD%BF%E7%94%A8%E7%BB%8F%E9%AA%8C%0A%0A%E6%97%A5%E5%90%8E%E8%BF%98%E6%83%B3%E5%88%86%E6%9E%90%E6%8B%B3%E5%87%BB%E3%80%81%E6%A0%BC%E6%96%97%E3%80%81%E4%B9%92%E4%B9%93%E7%90%83%E3%80%81%E5%81%A5%E8%BA%AB%E7%9A%84%E8%A7%86%E9%A2%91%EF%BC%8C%E8%83%BD%E9%97%AE%E4%B8%80%E4%B8%8B%E4%BB%80%E4%B9%88%E6%96%B9%E6%A1%88%E6%AF%94%E8%BE%83%E5%A5%BD%E5%90%97%EF%BC%9F%0A%23%23%23%23%20%E8%A7%86%E9%A2%91%E5%88%86%E6%9E%90%0A%21%5B%5D%28assets/930%20251210/image-130.png)
+日后还想分析拳击、格斗、乒乓球、健身的视频，能问一下什么方案比较好吗？
+#### 视频分析
+![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-130.png)
 
 #### 格斗分析
 ![](/growth/020%20%E6%88%90%E9%95%BF%E6%97%A5%E8%AE%B0/assets/930%20251210/image-140.png)
